# flipman

./: .clang-format  .gitignore  CMakeLists.txt  ISSUES.md  README.md  build_app.sh
cmake/: FindDeckLinkSDK.cmake  exportheader.cmake  qtutils.cmake  shadercompile.cmake
data/: 24fps.mov  build_data.sh  build_manifest.sh  manifest.txt
data/fx/: checker.fx  (+4 more)
scripts/: clang-format.sh
sdk/: CMakeLists.txt
sdk/av/: audiofilter.cpp  clip.cpp  fps.cpp  media.cpp  mediaprocessor.cpp  rendereffect.cpp  renderengine.cpp  renderlayer.cpp  sidecar.cpp  smptetime.cpp  time.cpp  timeline.cpp  timer.mm  timerange.cpp  track.cpp
sdk/core/: audiobuffer.cpp  audioformat.cpp  container.cpp  error.cpp  file.cpp  filerange.cpp  imagebuffer.cpp  imageformat.cpp  object.cpp  os.mm  parameters.cpp  plugin.cpp
sdk/include/av/: audiofilter.h  clip.h  fps.h  media.h  mediaprocessor.h  rendereffect.h  renderengine.h  renderlayer.h  sidecar.h  smptetime.h  time.h  timeline.h  timer.h  timerange.h  track.h
sdk/include/core/: audiobuffer.h  audioformat.h  container.h  error.h  file.h  filerange.h  imagebuffer.h  imageformat.h  object.h  os.h  parameters.h  plugin.h
sdk/include/plugins/: mediareader.h  mediawriter.h  pluginhandler.h  pluginregistry.h  qtwriter.h  quicktimereader.h  quicktimewriter.h
sdk/include/widgets/: palette.h  timeedit.h  timeline.h  viewport.h
sdk/plugins/: mediareader.cpp  mediawriter.cpp  pluginregistry.cpp  qtwriter.cpp  quicktimereader.mm  quicktimewriter.mm
sdk/widgets/: palette.cpp  timeedit.cpp  timeline.cpp  viewport.cpp
sources/flipman/: CMakeLists.txt  flipman.cpp  flipman.h  flipman.ui  main.cpp  suggestfeature.h
sources/flipman/resources/: color.frag  color.frag.qsb  color.vert  update.sh
sources/flipmansdk/: CMakeLists.txt
sources/flipmansdk/av/: audiofilter.cpp  clip.cpp  fps.cpp  media.cpp  mediaprocessor.cpp  rendereffect.cpp  renderengine.cpp  renderlayer.cpp  sidecar.cpp  smptetime.cpp  time.cpp  timeline.cpp  timer.mm  timerange.cpp  track.cpp
sources/flipmansdk/core/: application.cpp  audiobuffer.cpp  audioformat.cpp  core.cpp  environment.cpp  error.cpp  file.cpp  filerange.cpp  imagebuffer.cpp  imageformat.cpp  log.cpp  metadata.cpp  parameters.cpp  plugin.cpp  style.cpp  system.mm
sources/flipmansdk/include/: flipmansdk.h
sources/flipmansdk/include/av/: audiofilter.h  clip.h  fps.h  media.h  mediaprocessor.h  rendereffect.h  renderengine.h  renderlayer.h  sidecar.h  smptetime.h  time.h  timeline.h  timer.h  timerange.h  track.h
sources/flipmansdk/include/core/: application.h  audiobuffer.h  audioformat.h  environment.h  error.h  file.h  filerange.h  imagebuffer.h  imageformat.h  parameters.h  plugin.h  style.h  system.h
sources/flipmansdk/include/flipmansdk/: flipmanexport.h  flipmansdk.h
sources/flipmansdk/include/flipmansdk/av/: audiofilter.h  av.h  clip.h  fps.h  media.h  mediaprocessor.h  rendereffect.h  renderengine.h  renderlayer.h  sidecar.h  smptetime.h  time.h  timeline.h  timer.h  timerange.h  track.h
sources/flipmansdk/include/flipmansdk/core/: application.h  audiobuffer.h  audioformat.h  core.h  dispatchgroup.h  environment.h  error.h  file.h  filerange.h  imagebuffer.h  imageformat.h  log.h  metadata.h  parameters.h  plugin.h  style.h  system.h
sources/flipmansdk/include/flipmansdk/log/: log.h
sources/flipmansdk/include/flipmansdk/plugins/: effectreader.h  imageeffectreader.h  mediareader.h  mediawriter.h  pluginhandler.h  pluginregistry.h
sources/flipmansdk/include/flipmansdk/plugins/fx/: fxreader.h
sources/flipmansdk/include/flipmansdk/plugins/oiio/: oiioreader.h  oiiowriter.h
sources/flipmansdk/include/flipmansdk/plugins/qt/: qt.h  qtwriter.h
sources/flipmansdk/include/flipmansdk/plugins/quicktime/: quicktime.h  quicktimereader.h  quicktimewriter.h
sources/flipmansdk/include/flipmansdk/render/: imageeffect.h  imagelayer.h  render.h  rendercontext.h  renderdevice.h  renderengine.h  renderoffscreen.h  renderoutput.h  renderspec.h  rendersurface.h  shadercompiler.h  shadercomposer.h  shadercontract.h  shaderdefinition.h  shaderdescriptor.h  shaderfunction.h  shaderparser.h
sources/flipmansdk/include/flipmansdk/widgets/: renderwidget.h  timeedit.h  timeeditwidget.h  timeline.h  timelinewidget.h  viewer.h  window.h
sources/flipmansdk/include/plugins/: mediareader.h  mediawriter.h  pluginhandler.h  pluginregistry.h
sources/flipmansdk/include/plugins/qt/: qt.h
sources/flipmansdk/include/plugins/quicktime/: quicktime.h
sources/flipmansdk/include/widgets/: renderwidget.h  timeeditwidget.h  timelinewidget.h
sources/flipmansdk/log/: log.cpp
sources/flipmansdk/plugins/: effectreader.cpp  imageeffectreader.cpp  mediareader.cpp  mediawriter.cpp  pluginregistry.cpp
sources/flipmansdk/plugins/fx/: fxreader.cpp
sources/flipmansdk/plugins/oiio/: oiioreader.cpp  oiiowriter.cpp
sources/flipmansdk/plugins/qt/: qtwriter.cpp
sources/flipmansdk/plugins/quicktime/: quicktimereader.mm  quicktimewriter.mm
sources/flipmansdk/render/: imageeffect.cpp  imagelayer.cpp  rendercontext.cpp  renderdevice.cpp  renderengine.cpp  renderoffscreen.cpp  renderoutput.cpp  renderspec.cpp  rendersurface.cpp  shadercompiler.cpp  shadercomposer.cpp  shadercontract.cpp  shaderdefinition.cpp  shaderparser.cpp
sources/flipmansdk/resources/: flipmansdk.qrc  stylesheet.qss
sources/flipmansdk/resources/glsl/: blit.glsl  common.glsl  layer.glsl  rgba8.glsl  transform.glsl  uyvy8.glsl  viewer.glsl
sources/flipmansdk/resources/style/: style.qrc  style.qss
sources/flipmansdk/shaders/: shaders.qrc.in
sources/flipmansdk/widgets/: renderwidget.cpp  timeedit.cpp  timeeditwidget.cpp  timeline.cpp  timelinewidget.cpp  viewer.cpp  viewer.mm  window.cpp
sources/tests/testdecklink/: CMakeLists.txt  main.cpp  window.cpp  window.h
sources/tests/testsdk/: CMakeLists.txt  main.cpp  testsdk.cpp  testsdk.h
sources/tests/teststyle/: CMakeLists.txt  window.cpp
sources/tests/testtimeline/: CMakeLists.txt  main.cpp  timelinewidget.cpp  timelinewidget.h  window.cpp  window.h
sources/tests/testwidgets/: CMakeLists.txt  main.cpp
(+40 files in other folders)
